bunch of fixes, pipeline should work now though not very robust...

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,5 +1,6 @@
 # description of entire config https://detectron2.readthedocs.io/modules/config.html#config-references
 MODEL:
+  META_ARCHITECTURE: "ClsNet"
   BACKBONE:
     NAME: "build_mnetv1_backbone" # MobileNetV1
     FREEZE_AT: 0 # freezing a layer means setting the requires_grad to False
@@ -18,6 +19,7 @@ DATALOADER:
   ASPECT_RATIO_GROUPING: False # whether to group images with similar aspect ratio for efficiency
   NUM_WORKERS: 4 # number of parallel data loading workers
 SOLVER:
+  IMS_PER_BATCH: 64
   BASE_LR: 0.1
   STEPS: (150000, 180000) # The iteration number to decrease learning rate by GAMMA
   MAX_ITER: 20 # maximum number of iterations
