--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,6 +1,7 @@
 # description of entire config https://detectron2.readthedocs.io/modules/config.html#config-references
 MODEL:
   META_ARCHITECTURE: "ClsNet"
+  POS_WEIGHT: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
   BACKBONE:
     NAME: "build_mnetv1_backbone" # MobileNetV1
     FREEZE_AT: 0 # freezing a layer means setting the requires_grad to False
