--- a/env.yml
+++ b/env.yml
@@ -28,6 +28,7 @@ dependencies:
   - jasper=2.0.14=h07fcdf6_1
   - jedi=0.17.2=py36_0
   - jpeg=9b=h024ee3a_2
+  - jsonlines=1.2.0=py_2
   - lcms2=2.11=h396b838_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
   - libedit=3.1.20191231=h14c3975_1
@@ -51,7 +52,6 @@ dependencies:
   - mkl_random=1.1.1=py36h0573a6f_0
   - ncurses=6.2=he6710b0_1
   - ninja=1.10.1=py36hfd86e86_0
-  - numpy=1.19.1=py36hbc911f0_0
   - numpy-base=1.19.1=py36hfa32c7d_0
   - olefile=0.46=py36_0
   - opencv=3.4.2=py36h6fd60c2_1
@@ -75,7 +75,6 @@ dependencies:
   - python_abi=3.6=1_cp36m
   - pytorch=1.6.0=py3.6_cuda10.2.89_cudnn7.6.5_0
   - pytz=2020.1=py_0
-  - pyyaml=5.1=py36h7b6447c_0
   - readline=8.0=h7b6447c_0
   - setuptools=49.6.0=py36_1
   - six=1.15.0=py_0
@@ -125,6 +124,7 @@ dependencies:
     - markdown==3.3
     - matplotlib==3.3.2
     - mock==4.0.2
+    - numpy==1.19.2
     - oauthlib==3.1.0
     - portalocker==2.0.0
     - protobuf==3.13.0
@@ -134,6 +134,7 @@ dependencies:
     - pydot==1.4.1
     - pyparsing==2.4.7
     - pysocks==1.7.1
+    - pyyaml==5.1
     - requests==2.24.0
     - requests-oauthlib==1.3.0
     - rsa==4.6
