--- a/env.yml
+++ b/env.yml
@@ -5,29 +5,52 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
+  - argon2-cffi=20.1.0=py36h7b6447c_1
+  - async_generator=1.10=py36h28b3542_0
+  - attrs=20.2.0=py_0
   - backcall=0.2.0=py_0
   - blas=1.0=mkl
+  - bleach=3.2.1=py_0
   - bzip2=1.0.8=h516909a_3
   - ca-certificates=2020.10.14=0
   - cairo=1.16.0=h18b612c_1001
   - certifi=2020.6.20=py36_0
+  - cffi=1.14.3=py36he30daa8_0
   - cudatoolkit=10.2.89=hfd86e86_1
+  - dbus=1.13.18=hb2f20db_0
   - decorator=4.4.2=py_0
+  - defusedxml=0.6.0=py_0
+  - entrypoints=0.3=py36_0
+  - expat=2.2.10=he6710b0_2
   - ffmpeg=4.0=hcdf2ecd_0
   - fontconfig=2.13.1=he4413a7_1000
   - freeglut=3.0.0=hf484d3e_1005
   - freetype=2.10.2=h5ab3b9f_0
   - glib=2.65.0=h3eb4bd4_0
   - graphite2=1.3.13=he1b5a44_1001
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb31296c_0
   - harfbuzz=1.8.8=hffaf4a1_0
   - hdf5=1.10.2=hc401514_3
   - icu=58.2=hf484d3e_1000
+  - importlib-metadata=2.0.0=py_1
+  - importlib_metadata=2.0.0=1
   - intel-openmp=2020.2=254
+  - ipykernel=5.3.4=py36h5ca1d4c_0
   - ipython=7.16.1=py36h5ca1d4c_0
   - ipython_genutils=0.2.0=py36_0
+  - ipywidgets=7.5.1=py_1
   - jasper=2.0.14=h07fcdf6_1
   - jedi=0.17.2=py36_0
+  - jinja2=2.11.2=py_0
   - jpeg=9b=h024ee3a_2
+  - jsonlines=1.2.0=py_2
+  - jsonschema=3.2.0=py_2
+  - jupyter=1.0.0=py36_7
+  - jupyter_client=6.1.7=py_0
+  - jupyter_console=6.2.0=py_0
+  - jupyter_core=4.6.3=py36_0
+  - jupyterlab_pygments=0.1.2=py_0
   - lcms2=2.11=h396b838_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
   - libedit=3.1.20191231=h14c3975_1
@@ -38,6 +61,7 @@ dependencies:
   - libopencv=3.4.2=hb342d67_1
   - libopus=1.3.1=h7b6447c_0
   - libpng=1.6.37=hbc83047_0
+  - libsodium=1.0.18=h7b6447c_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.1.0=h2733197_1
   - libuuid=2.32.1=h14c3975_1000
@@ -45,18 +69,27 @@ dependencies:
   - libxcb=1.13=h14c3975_1002
   - libxml2=2.9.10=he19cac6_1
   - lz4-c=1.9.2=he6710b0_1
+  - markupsafe=1.1.1=py36h7b6447c_0
+  - mistune=0.8.4=py36h7b6447c_0
   - mkl=2020.2=256
   - mkl-service=2.3.0=py36he904b0f_0
   - mkl_fft=1.2.0=py36h23d657b_0
   - mkl_random=1.1.1=py36h0573a6f_0
+  - nbclient=0.5.1=py_0
+  - nbconvert=6.0.7=py36_0
+  - nbformat=5.0.8=py_0
   - ncurses=6.2=he6710b0_1
+  - nest-asyncio=1.4.1=py_0
   - ninja=1.10.1=py36hfd86e86_0
-  - numpy=1.19.1=py36hbc911f0_0
+  - notebook=6.1.4=py36_0
   - numpy-base=1.19.1=py36hfa32c7d_0
   - olefile=0.46=py36_0
   - opencv=3.4.2=py36h6fd60c2_1
   - openssl=1.1.1h=h7b6447c_0
+  - packaging=20.4=py_0
   - pandas=1.1.3=py36he6710b0_0
+  - pandoc=2.11=hb0f4dca_0
+  - pandocfilters=1.4.2=py36_1
   - parso=0.7.0=py_0
   - pcre=8.44=he1b5a44_0
   - pexpect=4.8.0=py36_0
@@ -64,27 +97,43 @@ dependencies:
   - pillow=7.2.0=py36hb39fc2d_0
   - pip=20.2.3=py36_0
   - pixman=0.38.0=h516909a_1003
+  - prometheus_client=0.8.0=py_0
   - prompt-toolkit=3.0.7=py_0
+  - prompt_toolkit=3.0.7=0
   - psutil=5.7.2=py36h7b6447c_0
   - pthread-stubs=0.4=h14c3975_1001
   - ptyprocess=0.6.0=py36_0
   - py-opencv=3.4.2=py36hb342d67_1
+  - pycparser=2.20=py_2
   - pygments=2.7.1=py_0
+  - pyparsing=2.4.7=py_0
+  - pyqt=5.9.2=py36h05f1152_2
+  - pyrsistent=0.17.3=py36h7b6447c_0
   - python=3.6.12=hcff3b4d_2
   - python-dateutil=2.8.1=py_0
   - python_abi=3.6=1_cp36m
   - pytorch=1.6.0=py3.6_cuda10.2.89_cudnn7.6.5_0
   - pytz=2020.1=py_0
-  - pyyaml=5.1=py36h7b6447c_0
+  - pyzmq=19.0.2=py36he6710b0_1
+  - qt=5.9.7=h5867ecd_1
+  - qtconsole=4.7.7=py_0
+  - qtpy=1.9.0=py_0
   - readline=8.0=h7b6447c_0
+  - send2trash=1.5.0=py36_0
   - setuptools=49.6.0=py36_1
+  - sip=4.19.8=py36hf484d3e_0
   - six=1.15.0=py_0
   - sqlite=3.33.0=h62c20be_0
+  - terminado=0.9.1=py36_0
+  - testpath=0.4.4=py_0
   - tk=8.6.10=hbc83047_0
   - torchvision=0.7.0=py36_cu102
+  - tornado=6.0.4=py36h7b6447c_1
   - traitlets=4.3.3=py36_0
   - wcwidth=0.2.5=py_0
+  - webencodings=0.5.1=py36_1
   - wheel=0.35.1=py_0
+  - widgetsnbextension=3.5.1=py36_0
   - xorg-fixesproto=5.0=h14c3975_1002
   - xorg-inputproto=2.3.2=h14c3975_1002
   - xorg-kbproto=1.0.7=h14c3975_1002
@@ -102,6 +151,8 @@ dependencies:
   - xorg-xproto=7.0.31=h14c3975_1007
   - xz=5.2.5=h7b6447c_0
   - yaml=0.1.7=had09818_2
+  - zeromq=4.3.3=he6710b0_3
+  - zipp=3.3.0=py_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h9ceee32_0
   - pip:
@@ -120,11 +171,11 @@ dependencies:
     - google-auth-oauthlib==0.4.1
     - grpcio==1.32.0
     - idna==2.10
-    - importlib-metadata==2.0.0
     - kiwisolver==1.2.0
     - markdown==3.3
     - matplotlib==3.3.2
     - mock==4.0.2
+    - numpy==1.19.2
     - oauthlib==3.1.0
     - portalocker==2.0.0
     - protobuf==3.13.0
@@ -132,8 +183,8 @@ dependencies:
     - pyasn1-modules==0.2.8
     - pycocotools==2.0.2
     - pydot==1.4.1
-    - pyparsing==2.4.7
     - pysocks==1.7.1
+    - pyyaml==5.1
     - requests==2.24.0
     - requests-oauthlib==1.3.0
     - rsa==4.6
@@ -145,6 +196,5 @@ dependencies:
     - urllib3==1.25.10
     - werkzeug==1.0.1
     - yacs==0.1.8
-    - zipp==3.3.0
 prefix: /home/rodriguedeschaetzen/miniconda/envs/projectx
 
