--- a/env.yml
+++ b/env.yml
@@ -43,6 +43,7 @@ dependencies:
   - jasper=2.0.14=h07fcdf6_1
   - jedi=0.17.2=py36_0
   - jinja2=2.11.2=py_0
+  - joblib=0.17.0=py_0
   - jpeg=9b=h024ee3a_2
   - jsonlines=1.2.0=py_2
   - jsonschema=3.2.0=py_2
@@ -57,6 +58,7 @@ dependencies:
   - libffi=3.3=he6710b0_2
   - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran=3.0.0=1
+  - libgfortran-ng=7.3.0=hdf63c60_0
   - libglu=9.0.0=he1b5a44_1001
   - libopencv=3.4.2=hb342d67_1
   - libopus=1.3.1=h7b6447c_0
@@ -119,6 +121,8 @@ dependencies:
   - qtconsole=4.7.7=py_0
   - qtpy=1.9.0=py_0
   - readline=8.0=h7b6447c_0
+  - scikit-learn=0.23.2=py36h0573a6f_0
+  - scipy=1.5.2=py36h0b6359f_0
   - send2trash=1.5.0=py36_0
   - setuptools=49.6.0=py36_1
   - sip=4.19.8=py36hf484d3e_0
@@ -126,6 +130,7 @@ dependencies:
   - sqlite=3.33.0=h62c20be_0
   - terminado=0.9.1=py36_0
   - testpath=0.4.4=py_0
+  - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.10=hbc83047_0
   - torchvision=0.7.0=py36_cu102
   - tornado=6.0.4=py36h7b6447c_1
