Added gridsize argument to make_real_data_json.py

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,39 +1,57 @@
-# description of entire config https://detectron2.readthedocs.io/modules/config.html#config-references
-MODEL:
-  META_ARCHITECTURE: "ClsNet"
-  POS_WEIGHT: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
-  BACKBONE:
-    NAME: "build_mnetv1_backbone" # MobileNetV1
-    FREEZE_AT: 0 # freezing a layer means setting the requires_grad to False
-  MNET:
-    OUT_FEATURES: ['linear']
-    WIDTH_MULT: 0.25 # Width multiplier - adjusts number of channels in each layer by this amount
-  CLSNET:
-    ENABLE: True
-    NUM_CLASSES: 16
-    INPUT_SIZE: 224 # resizes image to 224x224
-
-DATASETS:
-  TRAIN: ("smokenet_train", )
-  TEST: ("smokenet_val", )
 DATALOADER:
-  ASPECT_RATIO_GROUPING: False # whether to group images with similar aspect ratio for efficiency
-  NUM_WORKERS: 4 # number of parallel data loading workers
-SOLVER:
-  IMS_PER_BATCH: 64
-  BASE_LR: 0.1
-  STEPS: (150000, 180000) # The iteration number to decrease learning rate by GAMMA
-  MAX_ITER: 20 # maximum number of iterations
+  ASPECT_RATIO_GROUPING: false
+  NUM_WORKERS: 4
+DATASETS:
+  TEST: ("smokenet_val", )
+  TRAIN: ("smokenet_train", )
+DATA_DIR_PATH: /home/raphael_menoni/smoke-detection-net/data/full/bigsmoke
+EARLY_STOPPING:
+  ENABLE: true
+  MODE: max
+  MONITOR: accuracy
+  PATIENCE: 10
+EVAL_ONLY: false
 INPUT:
   CROP:
-    ENABLED: False
+    ENABLED: false
+MODEL:
+  BACKBONE:
+    FREEZE_AT: 0
+    NAME: build_mnetv1_backbone
+  CLSNET:
+    ENABLE: true
+    INPUT_SIZE: 224
+    NUM_CLASSES: 16
+  META_ARCHITECTURE: ClsNet
+  MNET:
+    OUT_FEATURES:
+    - linear
+    WIDTH_MULT: 0.25
+  POS_WEIGHT:
+  - 27
+  - 4
+  - 26
+  - 274800000
+  - 5
+  - 0
+  - 11
+  - 26
+  - 248
+  - 23
+  - 8
+  - 182
+  - 274800000
+  - 274800000
+  - 71
+  - 51
+  WEIGHTS: ''
+OUTPUT_DIR: /home/raphael_menoni/smoke-detection-net/output
+SEED: 999
+SOLVER:
+  BASE_LR: 0.01
+  IMS_PER_BATCH: 32
+  MAX_ITER: 8587
+  STEPS: (150000, 180000)
 TEST:
-  EVAL_PERIOD: 0 # the period to evaluate the model during training, 0 means disable
-
-EARLY_STOPPING:
-  ENABLE: True
-  MONITOR: "validation_loss"
-  PATIENCE: 10
-  MODE: "min"
-
+  EVAL_PERIOD: 171
 VERSION: 2
