--- a/env.yml
+++ b/env.yml
@@ -14,7 +14,7 @@ dependencies:
   - bzip2=1.0.8=h516909a_3
   - ca-certificates=2020.10.14=0
   - cairo=1.16.0=h18b612c_1001
-  - certifi=2020.6.20=py36_0
+  - certifi=2020.6.20=pyhd3eb1b0_3
   - cffi=1.14.3=py36he30daa8_0
   - cudatoolkit=10.2.89=hfd86e86_1
   - dbus=1.13.18=hb2f20db_0
@@ -72,6 +72,7 @@ dependencies:
   - libxml2=2.9.10=he19cac6_1
   - lz4-c=1.9.2=he6710b0_1
   - markupsafe=1.1.1=py36h7b6447c_0
+  - matplotlib-base=3.2.2=py36hef1b27d_0
   - mistune=0.8.4=py36h7b6447c_0
   - mkl=2020.2=256
   - mkl-service=2.3.0=py36he904b0f_0
@@ -123,6 +124,7 @@ dependencies:
   - readline=8.0=h7b6447c_0
   - scikit-learn=0.23.2=py36h0573a6f_0
   - scipy=1.5.2=py36h0b6359f_0
+  - seaborn=0.11.0=py_0
   - send2trash=1.5.0=py36_0
   - setuptools=49.6.0=py36_1
   - sip=4.19.8=py36hf484d3e_0
