--- a/scripts/env.yml
+++ b/scripts/env.yml
@@ -165,6 +165,7 @@ dependencies:
   - xz=5.2.5=h7b6447c_0
   - yaml=0.1.7=had09818_2
   - zeromq=4.3.3=he6710b0_3
+  - zipp=3.4.0=py_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h9ceee32_0
   - pip:
@@ -205,6 +206,5 @@ dependencies:
     - urllib3==1.26.2
     - werkzeug==1.0.1
     - yacs==0.1.8
-    - zipp==3.4.0
 prefix: /root/miniconda/envs/projectx
 
