--- a/src/config_resnet.yaml
+++ b/src/config_resnet.yaml
@@ -1,46 +1,63 @@
-# description of entire config https://detectron2.readthedocs.io/modules/config.html#config-references
+DATALOADER:
+  ASPECT_RATIO_GROUPING: false
+  NUM_WORKERS: 4
+DATASETS:
+  TEST: ("smokenet_val", )
+  TRAIN: ("smokenet_train", )
+DATA_DIR_PATH: /home/rodriguedeschaetzen/smoke-detection-net/data/full/frames_100
+EARLY_STOPPING:
+  ENABLE: true
+  MODE: max
+  MONITOR: f1-score
+  PATIENCE: 10
+EVAL_ONLY: true
+INPUT:
+  CROP:
+    ENABLED: false
 MODEL:
-  META_ARCHITECTURE: "ClsNet"
-  POS_WEIGHT: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
   BACKBONE:
-    NAME: "build_resnet_cls_backbone" # Resnet-50
-    FREEZE_AT: 2 # freezing a layer means setting the requires_grad to False
-  MNET: # not used by resnet
+    FREEZE_AT: 2
+    NAME: build_resnet_cls_backbone
+  CLSNET:
+    ENABLE: true
+    INPUT_SIZE: 224
+    NUM_CLASSES: 16
+  META_ARCHITECTURE: ClsNet
+  MNET:
     OUT_FEATURES:
     - linear
     WIDTH_MULT: 0.25
-  CLSNET:
-    ENABLE: True
-    NUM_CLASSES: 16
-    INPUT_SIZE: 224 # resizes image to 224x224
-  WEIGHTS: "detectron2://ImageNetPretrained/MSRA/R-50.pkl"
+  POS_WEIGHT:
+  - 7
+  - 3
+  - 4
+  - 9
+  - 4
+  - 1
+  - 1
+  - 4
+  - 5
+  - 2
+  - 2
+  - 7
+  - 90
+  - 32
+  - 27
+  - 74
   RESNETS:
-    DEPTH: 50
+    DEPTH: 101
     NORM: FrozenBN
     OUT_FEATURES:
     - linear
-
-DATASETS:
-  TRAIN: ("smokenet_train", )
-  TEST: ("smokenet_val", )
-DATALOADER:
-  ASPECT_RATIO_GROUPING: False # whether to group images with similar aspect ratio for efficiency
-  NUM_WORKERS: 4 # number of parallel data loading workers
+  WEIGHTS: /home/rodriguedeschaetzen/smoke-detection-net/output/resnet-101/model_best.pth
+OUTPUT_DIR: /home/rodriguedeschaetzen/smoke-detection-net/output/resnet-101
+SEED: 999
 SOLVER:
-  IMS_PER_BATCH: 64
-  BASE_LR: 0.1
-  STEPS: (150000, 180000) # The iteration number to decrease learning rate by GAMMA
-  MAX_ITER: 20 # maximum number of iterations
-INPUT:
-  CROP:
-    ENABLED: False
+  BASE_LR: 0.0005
+  CHECKPOINT_PERIOD: 10000
+  IMS_PER_BATCH: 16
+  MAX_ITER: 143071
+  STEPS: (150000, 180000)
 TEST:
-  EVAL_PERIOD: 0 # the period to evaluate the model during training, 0 means disable
-
-EARLY_STOPPING:
-  ENABLE: True
-  MONITOR: "validation_loss"
-  PATIENCE: 10
-  MODE: "min"
-
+  EVAL_PERIOD: 2861
 VERSION: 2
