--- a/src/config_resnet.yaml
+++ b/src/config_resnet.yaml
@@ -8,9 +8,9 @@ DATA_DIR_PATH: /home/rodriguedeschaetzen/smoke-detection-net/data/full/frames_10
 EARLY_STOPPING:
   ENABLE: true
   MODE: max
-  MONITOR: f1-score
+  MONITOR: f1_score
   PATIENCE: 10
-EVAL_ONLY: true
+EVAL_ONLY: false
 INPUT:
   CROP:
     ENABLED: false
@@ -26,13 +26,13 @@ MODEL:
   MNET:
     OUT_FEATURES:
     - linear
-    WIDTH_MULT: 0.25
+    WIDTH_MULT: 0.5
   POS_WEIGHT:
   - 7
   - 3
   - 4
   - 9
-  - 4
+  - 3
   - 1
   - 1
   - 4
@@ -40,24 +40,28 @@ MODEL:
   - 2
   - 2
   - 7
-  - 90
-  - 32
-  - 27
-  - 74
+  - 71
+  - 37
+  - 36
+  - 106
   RESNETS:
     DEPTH: 101
     NORM: FrozenBN
     OUT_FEATURES:
     - linear
-  WEIGHTS: /home/rodriguedeschaetzen/smoke-detection-net/output/resnet-101/model_best.pth
-OUTPUT_DIR: /home/rodriguedeschaetzen/smoke-detection-net/output/resnet-101
+  WEIGHTS: /home/rodriguedeschaetzen/smoke-detection-net/pretrained_models/X-101-32x8d.pkl
+OUTPUT_DIR: /home/rodriguedeschaetzen/smoke-detection-net/output/proper-lr-test
 SEED: 999
 SOLVER:
   BASE_LR: 0.0005
   CHECKPOINT_PERIOD: 10000
+  GAMMA: 0.1
   IMS_PER_BATCH: 16
-  MAX_ITER: 143071
-  STEPS: (150000, 180000)
+  MAX_ITER: 143703
+  STEPS: !!python/tuple
+  - 1500
+  - 2000
+  - 10000
 TEST:
-  EVAL_PERIOD: 2861
+  EVAL_PERIOD: 718
 VERSION: 2
