--- a/src/config_resnext.yaml
+++ b/src/config_resnext.yaml
@@ -4,7 +4,7 @@ DATALOADER:
 DATASETS:
   TEST: ("smokenet_val", )
   TRAIN: ("smokenet_train", )
-DATA_DIR_PATH: /home/rodriguedeschaetzen/smoke-detection-net/data/full/mankind
+DATA_DIR_PATH: /home/rodriguedeschaetzen/smoke-detection-net/data/full/frames_100_bk
 EARLY_STOPPING:
   ENABLE: true
   MODE: max
@@ -21,29 +21,17 @@ MODEL:
   CLSNET:
     ENABLE: true
     INPUT_SIZE: 224
-    NUM_CLASSES: 16
+    NUM_CLASSES: 4
   META_ARCHITECTURE: ClsNet
   MNET:
     OUT_FEATURES:
     - linear
     WIDTH_MULT: 0.5
   POS_WEIGHT:
-  - 52800000
-  - 52800000
-  - 52800000
-  - 52800000
-  - 25
-  - 2
-  - 6
-  - 10
-  - 17
-  - 7
-  - 9
-  - 6
-  - 52800000
-  - 52800000
-  - 52800000
-  - 52800000
+  - 1
+  - 1
+  - 3
+  - 3
   RESNETS:
     DEPTH: 101
     NORM: FrozenBN
@@ -53,18 +41,19 @@ MODEL:
     STRIDE_IN_1X1: false
     WIDTH_PER_GROUP: 8
   WEIGHTS: /home/rodriguedeschaetzen/smoke-detection-net/pretrained_models/X-101-32x8d.pkl
-OUTPUT_DIR: /home/rodriguedeschaetzen/smoke-detection-net/output/resnext-101-proper-lr-test
+OUTPUT_DIR: /home/rodriguedeschaetzen/smoke-detection-net/output/X-101-grid-2-thres-0.1
 SEED: 999
 SOLVER:
   BASE_LR: 0.0001
   CHECKPOINT_PERIOD: 10000
-  GAMMA: 0.01
+  GAMMA: 0.1
   IMS_PER_BATCH: 16
-  MAX_ITER: 1650
+  MAX_ITER: 143703
   STEPS: !!python/tuple
+  - 1500
   - 2000
   - 10000
   WARMUP_ITERS: 1000
 TEST:
-  EVAL_PERIOD: 8
+  EVAL_PERIOD: 718
 VERSION: 2
